# chip8-cpp

./: CMakeLists.txt  README.md
source/: CMakeLists.txt
source/app/: CMakeLists.txt
source/app/include/chip8cpp_app/: app.hpp
source/app/src/: app.cpp  main.cpp
source/core/: CMakeLists.txt
source/core/include/chip8cpp/: chip8cpp.hpp
source/core/src/: chip8cpp.cpp
